--- a/exercise_6.html
+++ b/exercise_6.html
@@ -246,7 +246,7 @@
 </li>
 </ul>
 <h2 id="7-compare-between-scrum-and-kanban"><a class="header" href="#7-compare-between-scrum-and-kanban">7. Compare between Scrum and Kanban</a></h2>
-<p><img src="images/scrum-kanban.png" alt="scrum&amp;kanban" /></p>
+<p><img src="images/scrum-kanban.PNG" alt="scrum-kanban.png" /></p>
 <h2 id="8-explain-invest"><a class="header" href="#8-explain-invest">8. Explain INVEST</a></h2>
 <ul>
 <li>I -&gt; Independent</li>
