--- a/exercise_7.html
+++ b/exercise_7.html
@@ -254,7 +254,7 @@
 <li>Then (expected outcome)</li>
 </ol>
 <h2 id="12-compare-between-tdd--bdd--atdd"><a class="header" href="#12-compare-between-tdd--bdd--atdd">12. Compare between TDD &amp; BDD &amp; ATDD</a></h2>
-<p><img src="images/tdd-bdd-atdd.png" alt="tdd-bdd-atdd.png" /></p>
+<p><img src="images/tdd-bdd-atdd.PNG" alt="tdd-bdd-atdd.png" /></p>
 
                     </main>
 
