--- a/exercise_7.html
+++ b/exercise_7.html
@@ -174,6 +174,9 @@
 <li>address defects remaining from the previous iteration at the beginning of the next iteration, as part of the backlog for that iteration.</li>
 <li>is functional/feature testing of expected behaviors of an application as a whole.</li>
 <li>involves cooperative stakeholders using plain language to write acceptance tests based on the shared understanding of user story requirements.</li>
+<li>compare expected output with actual , mechanism that determines whether software executed correctly for a test case</li>
+<li>A chart used to track progress across the entire release and within each iteration</li>
+<li>lines of code added, modified, or deleted from one version to another </li>
 </ol>
 <blockquote>
 <blockquote>
@@ -182,6 +185,9 @@
 <li><code>fix bugs first</code></li>
 <li><code>Behavior-driven development (BDD)</code></li>
 <li><code>Acceptance test-driven development (ATDD)</code></li>
+<li><code>Test oracle</code></li>
+<li><code>Burndown charts</code></li>
+<li><code>code churn</code></li>
 </ol>
 </blockquote>
 </blockquote>
@@ -222,9 +228,18 @@
 </ol>
 <h2 id="7-organizational-options-for-independent-testing"><a class="header" href="#7-organizational-options-for-independent-testing">7. Organizational Options for Independent Testing</a></h2>
 <ol>
-<li>developers create many of the tests in the form of automated tests. One or more testers may be embedded within the team.</li>
-<li>retain fully independent separate test teams and assign testers on-demand during the final days of each sprint.</li>
-<li>have an independent, separate test team at the beginning of the project.</li>
+<li>embedded tester(s) within the team
+<ul>
+<li>risk of loss of independence and loss of objective evaluation</li>
+</ul>
+</li>
+<li>fully independent separate test team during the final days of each sprint
+<ul>
+<li>provide unbiased evaluation</li>
+<li>time pressures, lack of understanding lead to problems with this approach</li>
+</ul>
+</li>
+<li>independent separate test team assigned to agile team on al long-term basis at the beginning of the project</li>
 </ol>
 <h2 id="8-agile-testing-techniques"><a class="header" href="#8-agile-testing-techniques">8. Agile Testing Techniques</a></h2>
 <ol>
@@ -254,7 +269,23 @@
 <li>Then (expected outcome)</li>
 </ol>
 <h2 id="12-compare-between-tdd--bdd--atdd"><a class="header" href="#12-compare-between-tdd--bdd--atdd">12. Compare between TDD &amp; BDD &amp; ATDD</a></h2>
-<p><img src="images/tdd-bdd-atdd.PNG" alt="tdd-bdd-atdd.png" /></p>
+<p><img src="images/tdd-bdd-atdd.PNG" alt="tdd-bdd-atdd" /></p>
+<h2 id="13-mention-agile-principle"><a class="header" href="#13-mention-agile-principle">13. Mention Agile principle</a></h2>
+<ol>
+<li>Stabilization iterations</li>
+<li>fix bugs first</li>
+<li>Pairing</li>
+<li>Test automation at all levels</li>
+<li>Developers focus on creating unit tests</li>
+<li>Testers should focus on creating automated tests</li>
+<li>Lightweight work product documentation</li>
+</ol>
+<h2 id="13-benefits-of-automated-tests"><a class="header" href="#13-benefits-of-automated-tests">13. benefits of automated tests</a></h2>
+<ul>
+<li>provide rapid feedback on product quality</li>
+<li>provide a living document of system functionality</li>
+<li>automated unit test provide feedback on build quality but not on product quality.</li>
+</ul>
 
                     </main>
 
