--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE HTML>
 <html lang="en" class="sidebar-visible no-js rust">
     <head>
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-D6FWQEL8X2"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-D6FWQEL8X2');
+    </script>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
         <title>Lecture 1 Exercises - QA Exercises</title>
